# MLC-Project

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  context.md  sprint3_errors.md  sprint4_errors.md  text.txt
.github/workflows/: docs.yml  main.yml  tests.yml
apps/: main_norm.cpp  main_week1.cpp  main_week2.cpp  main_week3.cpp  main_week5.cpp  main_week6.cpp  main_week7.cpp
data/: contraction.teir  matmul.teir  transposition.teir
docs/source/: conf.py  contributions.rst  genai.rst  index.rst
docs/source/weeks/: project_norm.rst  sprint2_debug_log.rst  week1.rst  week2.rst  week3.rst  week5.rst  week6.rst  week7.rst
include/: base_math.hpp  utility.hpp
include/norm/: jit_norm.hpp  norm.hpp
include/week1/: base_math.hpp
include/week2/: fmadd.hpp  perm.hpp
include/week3/: gemm_sme.hpp  unary.hpp  utility.hpp
include/week5/: jit_engine.hpp  jit_kernel.hpp
include/week6/: Instgen.hpp  Unary.h  gemm.hpp  unary.hpp
include/week7/: Teir.h  Teir.hpp  TeirParser.hpp  TeirRuntime.h  TeirRuntime.hpp
presentation/: MLC-Norm_presentation_v2.pptx  Untitled presentation.pptx
src/: base_math.S  base_math.cpp
src/norm/: CMakeLists.txt  bw_probe_ssve.S  jit_norm.cpp  layer_norm_ssve.S  layer_norm_ssve.cpp  layer_norm_ssve_v1.S  layer_norm_ssve_v2.S  layer_norm_ssve_v4.S  layer_norm_ssve_v5.S  layer_norm_ssve_v6.S  layer_norm_ssve_welford.S  layer_norm_za.S  norm_ssve.cpp  reference.cpp  rms_norm_ssve.S  rms_norm_ssve_v1.S  rms_norm_ssve_v2.S  rms_norm_ssve_v3.S  rms_norm_ssve_v4.S  rms_norm_ssve_v5.S  rms_norm_ssve_v6.S  rms_norm_za.S
src/week1/: CMakeLists.txt  base_math.S  base_math.cpp
src/week2/: CMakeLists.txt  fmadd_asm.S  perm.S  perm.cpp
src/week3/: CMakeLists.txt  gemm_32_32_1.S  gemm_32_32_512.S  gemm_512_32_512.S  gemm_512_512_512.S  gemm_sme.S  gemm_sme.cpp  identity.S  identity.cpp  identity_16_16_asm.S  relu_16_16_asm.S  unary.cpp  zero_16_16_asm.S
src/week5/: CMakeLists.txt  formatter.cpp  jit_kernel.cpp
src/week6/: CMakeLists.txt  Instgen.cpp  Unary.cpp  gemm.cpp
src/week7/: CMakeLists.txt  TeirParser.cpp  TeirRuntime.cpp
tests/: test_main.cpp  test_norm.cpp  test_week1.cpp  test_week2.cpp  test_week3.cpp  test_week5.cpp  test_week6.cpp  test_week7.cpp  test_wek6.cpp
utility/: sme_check.cpp
